--- a/fast_vector_distance(v6.4.1)/src/main/resources/plugin-descriptor.properties
+++ b/fast_vector_distance(v6.4.1)/src/main/resources/plugin-descriptor.properties
@@ -3,7 +3,7 @@ version=1.0
 name=fast_vector_distance
 site=${elasticsearch.plugin.site}
 jvm=true
-classname=com.FeatureVectorScoreSearchPlugin
+classname=com.FastVectorDistance
 java.version=1.8
 elasticsearch.version=6.4.1
 isolated=${elasticsearch.plugin.isolated}
